# self-dc

./: .env.example  .gitignore  Procfile  README.md  __init__.py  main.js  package.json  pyproject.toml  requirements.txt  test_local.py
bot/: __main__.py  client.py  config.py  database.py
commands/: __init__.py  command_handler.py  command_registry.py  debug_commands.py  enchant_commands.py  farm_commands.py  help_command.py  on_off_commands.py  status_commands.py
config/: config.js
managers/: __init__.py  auto_enchant_manager.py  base_manager.py  debug_manager.py  event_handler.py  farm_manager.py  voice_manager.py
modules/: debug.js  events.js  farm.js  messageHandler.js  rpc.js
repositories/: __init__.py  cooldown_repository.py  farm_repository.py  settings_repository.py
self_dc_python/: .env.example  README.md  __init__.py
self_dc_python/bot/: client.py  keep_alive.py
self_dc_python/commands/: __init__.py  command_registry.py  voice_commands.py
self_dc_python/managers/: auto_enchant_manager.py  base_manager.py  event_handler.py  farm_manager.py
self_dc_python/repositories/: __init__.py  base_repository.py  voice_repository.py
self_dc_python/utils/: monitoring.py  validation.py
src/: index.js
src/commands/: CommandHandler.js  CommandRegistry.js  index.js
src/config/: database.js  index.js
src/managers/: AutoEnchantManager.js  BaseManager.js  DebugManager.js  EventHandler.js  FarmManager.js  VoiceManager.js  index.js
src/repositories/: BaseRepository.js  index.js  (+3 more)
utils/: __init__.py  discord.py  error_handler.py  logger.py  utils.js
(+7 files in other folders)
