[project]
name = "self-dc"
version = "2.0.0"
description = "Discord self-bot using discord.py-self"
requires-python = ">=3.11"
dependencies = [
    "discord.py-self @ git+https://github.com/dolfies/discord.py-self.git@master",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "python-json-logger>=2.0.7",
    "aiohttp>=3.9.0",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "system"

[tool.uv.pip]
generate-hashes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
